fix(quasar): Misc adjustment for dialogs
- make maxHeight of dialogs smaller - it overflows on Android
- scrollIntoView QInput and QSelect on mobiles
- use fade as transitionShow in QSelect dialog on iOS
- make maxHeight of QSelect dialog smaller (overflow on Android)
- make QSelect dialog without useInput larger on iOS

--- a/ui/src/components/dialog/dialog.styl
+++ b/ui/src/components/dialog/dialog.styl
@@ -30,7 +30,7 @@
     &--minimized
       padding 24px
       > div
-        max-height calc(100vh - 48px)
+        max-height calc(100vh - 108px)
 
     &--maximized
       > div
@@ -73,6 +73,9 @@
     z-index -1
     pointer-events all
     background $dimmed-background
+
+body.cordova .q-dialog__inner--minimized > div
+  max-height calc(100vh - 48px)
 
 body.q-ios-padding .q-dialog__inner
   padding-top $ios-statusbar-height !important
